--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "sortingQuality"]
 	path = sortingQuality
 	url = https://github.com/LBHB/sortingQuality.git
+[submodule "Kilosort2"]
+	path = Kilosort2
+	url = https://github.com/LBHB/Kilosort2.git
