--- a/.gitmodules
+++ b/.gitmodules
@@ -21,7 +21,7 @@
 	url = git@github.com:LBHB/phy-plugins.git
 [submodule "KiloSort2pt5"]
 	path = KiloSort2pt5
-	url = ./KiloSort2pt5/
+	url = https://github.com/LBHB/Kilosort2.git
 [submodule "phylib"]
 	path = phylib
-	url = ./phylib
+	url = https://github.com/LBHB/phylib.git
