Moved files from baphy/Utilities/Kilosort and narf

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "phylib"]
 	path = phylib
 	url = https://github.com/LBHB/phylib.git
+[submodule "BaphyKiloSort"]
+	path = BaphyKiloSort
+	url = ./BaphyKiloSort/
