LAS: commiting SVD, MLE, and LAS changes to make local copies of data and keep them if keep_local is set (default for Neuropixels), to create and run job using a json script made by web interface of celldb, and fixing channel map.

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "BaphyKiloSort"]
 	path = BaphyKiloSort
 	url = https://github.com/LBHB/BaphyKiloSort.git
+[submodule "open-ephys-matlab-tools"]
+	path = open-ephys-matlab-tools
+	url = https://github.com/open-ephys/open-ephys-matlab-tools.git
